[package]
name = "shoku"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.0"
piston2d-opengl_graphics = "0.52.0"
rand = "0.4"
num = "0.4.0"

[dev-dependencies]
anyhow = "1"
